--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico = countries"
+    "mexico = countries[2:3]"
    ]
   },
   {
