Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "mexico = None\n",
-    "mexico = countries[2:3]\n",
+    "mexico = countries[:3]\n",
     "mexico"
    ]
   },
