Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,23 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina']"
+       "['Mexico']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mexico = None\n",
-    "mexico = countries[:3]\n",
+    "mexico = countries[3:4]\n",
     "mexico"
    ]
   },
