Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors =[]"
+    "kindof_neighbors =[1:5]\n"
    ]
   },
   {
