Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,12 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-4bb31866f651>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4bb31866f651>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    kindof_neighbors =[1:5]\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors =[1:5]\n"
+    "kindof_neighbors =[1:5]\n",
+    "kindof_neighbors"
    ]
   },
   {
