--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    ],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors =[1:5]\n",
+    "kindof_neighbors = countries[1:5]\n",
     "kindof_neighbors"
    ]
   },
