--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # add code here\n"
    ]
   },
   {
