Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here\n"
+    "countries.append(\"Ml\") # add code here\n"
    ]
   },
   {
