Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append(\"Malta\") # add code here\n",
+    "countries"
    ]
   },
   {
