--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here"
+    "countries[6] = 'None' # add code here"
    ]
   },
   {
