--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
