Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,11 +471,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'USA',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Morocco',\n",
+       " 'Italy']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unique_countries = list(set(countries))"
+    "unique_countries = list(set(countries))\n",
+    "unique_countries"
    ]
   },
   {
