Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,7 @@
    ],
    "source": [
     "unique_countries = list(set(countries))\n",
-    "unique_countries"
+    "unique_countries\n"
    ]
   },
   {
