--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,8 @@
    ],
    "source": [
     "unique_countries = list(set(countries))\n",
-    "unique_countries\n"
+    "unique_countries\n",
+    "len(unique_countries)"
    ]
   },
   {
