--- a/index.ipynb
+++ b/index.ipynb
@@ -471,25 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Mexico',\n",
-       " 'Argentina',\n",
-       " 'USA',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Morocco',\n",
-       " 'Italy']"
+       "10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +488,7 @@
    "source": [
     "unique_countries = list(set(countries))\n",
     "unique_countries\n",
-    "len(unique_countries)"
+    "len(unique_countries)\n"
    ]
   },
   {
