--- a/index.ipynb
+++ b/index.ipynb
@@ -471,16 +471,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "['Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'USA',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Morocco',\n",
+       " 'Italy']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +497,7 @@
    "source": [
     "unique_countries = list(set(countries))\n",
     "unique_countries\n",
-    "len(unique_countries)\n"
+    "\n"
    ]
   },
   {
