Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,8 @@
    "source": [
     "unique_countries = list(set(countries))\n",
     "unique_countries\n",
-    "\n"
+    "\n",
+    "len(len(unique_countries))"
    ]
   },
   {
