Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,25 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Mexico',\n",
-       " 'Argentina',\n",
-       " 'USA',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Morocco',\n",
-       " 'Italy']"
+       "10"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +489,7 @@
     "unique_countries = list(set(countries))\n",
     "unique_countries\n",
     "\n",
-    "len(len(unique_countries))"
+    "len(unique_countries)"
    ]
   },
   {
