Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,25 +471,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "['Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'USA',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Morocco',\n",
+       " 'Italy']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_countries = list(set(countries))\n",
-    "unique_countries\n",
-    "\n",
-    "len(unique_countries)"
+    "unique_countries\n"
    ]
   },
   {
@@ -503,6 +510,13 @@
     "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
