--- a/index.ipynb
+++ b/index.ipynb
@@ -545,7 +545,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = \n",
+    "len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
