Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -546,7 +546,7 @@
    "outputs": [],
    "source": [
     "num_of_repeats = \n",
-    "len(unique_countries)\n",
+    "len(unique_countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
