--- a/index.ipynb
+++ b/index.ipynb
@@ -545,8 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = \n",
-    "len(unique_countries) - len(unique_countries)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
